--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,58 @@
     font-weight: bold;
     border-bottom: dodgerblue 2px solid;
 }
+.b{
+    border: 1px solid red;
+}
+
+/* //////////////////LANDING PAGE ///////////////// */
+#header{
+    width: 100%;
+    height: 80vh;
+    margin-top: 70px;
+}
+#header .brand-name{
+    color: dodgerblue;
+    font-weight: bold;
+}
+#header .btn-get-started{
+    font-size: 16px;
+    font-weight: 500;
+    display: inline-block;
+    color: dodgerblue;
+    border-radius: 50px;
+    padding: 10px 30px;
+    transition: 500ms;
+    border: 1px solid dodgerblue;
+    text-decoration: none;
+}
+#header .btn-get-started:hover{
+    color: #fff;
+    background-color: dodgerblue;
+}
+#header img{
+    text-align: right;
+    width: 100%;
+}
+.animated {
+    animation : up-down 3s infinite alternate-reverse ease-in-out;
+}
+
+
+
+@-webkit-keyframes up-down{
+    from {
+        transform: translateY(5%);
+    }
+    to{
+        transform: translateY(-5%);
+    }
+}
+@keyframes up-down{
+    from {
+        transform: translateY(5%);
+    }
+    to{
+        transform: translateY(-5%);
+    }
+}
