--- a/src/index.css
+++ b/src/index.css
@@ -1,86 +1,101 @@
-@import url('https://fonts.googleapis.com/css2?family=Dosis&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Dosis&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap");
 
 * {
-    margin: 0;
-    padding : 0;
-    box-sizing: border-box;
-    font-family: 'Dosis', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Kanit", "Dosis", sans-serif;
 }
 .navbar-brand {
-    color: dodgerblue !important;
-    font-weight: bold;
-    font-size: 1.5em !important;
+  color: dodgerblue !important;
+  font-weight: bold;
+  font-size: 1.7em !important;
 }
 .navbar {
-    background-color: #fff !important;
+  background-color: #fff !important;
 }
 
-.navbar a{
-    color: #2f2f2f;
+.navbar a {
+  color: #2f2f2f;
 }
-.navbar a:hover{
-    color: #00a2ff;
-    font-weight: bold;
-    border-bottom: 1ps dotted dodgerblue;
+.navbar a:hover {
+  color: #00a2ff;
+  font-weight: bold;
+  border-bottom: 1ps dotted dodgerblue;
 }
 
-
+.iconBlack {
+  color: black;
+}
 .menu_active {
-    font-weight: bold;
-    border-bottom: dodgerblue 2px solid;
+  font-weight: bold;
+  border-bottom: dodgerblue 2px solid;
 }
-.b{
-    border: 1px solid red;
+.b {
+  /* border: 1px solid red; */
 }
 
 /* //////////////////LANDING PAGE ///////////////// */
-#header{
-    width: 100%;
-    height: 80vh;
-    margin-top: 70px;
+.carousel-background {
+  width: 100%;
+  position: absolute;
+  top: 11%;
+  left: 0;
+  z-index: -1;
 }
-#header .brand-name{
-    color: dodgerblue;
-    font-weight: bold;
+.darken {
+  margin: 0;
+  width: 100%;
+  position: absolute;
+  height: 100%;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
 }
-#header .btn-get-started{
-    font-size: 16px;
-    font-weight: 500;
-    display: inline-block;
-    color: dodgerblue;
-    border-radius: 50px;
-    padding: 10px 30px;
-    transition: 500ms;
-    border: 1px solid dodgerblue;
-    text-decoration: none;
+#header {
+  width: 100%;
+  height: 80vh;
+  margin-top: 70px;
 }
-#header .btn-get-started:hover{
-    color: #fff;
-    background-color: dodgerblue;
+#header .brand-name {
+  color: dodgerblue;
+  font-weight: bold;
 }
-#header img{
-    text-align: right;
-    width: 100%;
+#header .btn-get-started {
+  font-size: 16px;
+  font-weight: 500;
+  display: inline-block;
+  color: dodgerblue;
+  border-radius: 50px;
+  padding: 10px 30px;
+  transition: 500ms;
+  border: 1px solid dodgerblue;
+  text-decoration: none;
+}
+#header .btn-get-started:hover {
+  color: #fff;
+  background-color: dodgerblue;
+}
+#header img {
+  text-align: right;
+  width: 100%;
 }
 .animated {
-    animation : up-down 3s infinite alternate-reverse ease-in-out;
+  animation: up-down 3s infinite alternate-reverse ease-in-out;
 }
 
-
-
-@-webkit-keyframes up-down{
-    from {
-        transform: translateY(5%);
-    }
-    to{
-        transform: translateY(-5%);
-    }
+@-webkit-keyframes up-down {
+  from {
+    transform: translateY(5%);
+  }
+  to {
+    transform: translateY(-5%);
+  }
 }
-@keyframes up-down{
-    from {
-        transform: translateY(5%);
-    }
-    to{
-        transform: translateY(-5%);
-    }
+@keyframes up-down {
+  from {
+    transform: translateY(5%);
+  }
+  to {
+    transform: translateY(-5%);
+  }
 }
