--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,8 @@
 
 /* //////////// NavBars///////////// */
 .main-logo {
-  width: 50px;
-  height: 50px;
+  width: 30px;
+  height: 30px;
   border-radius: 5px;
   margin: 0px 10px;
   /* border: 2px solid red; */
@@ -19,7 +19,7 @@
 .navbar-brand {
   color: dodgerblue !important;
 
-  font-size: 1.3em !important;
+  font-size: 1em !important;
 }
 .navbar-brand h2:hover {
   color: rgb(3, 77, 150);
@@ -29,7 +29,7 @@
   padding: 0;
 }
 .navbar {
-  background-color: #fff !important;
+  background-color: transparent !important;
   padding: 0 !important;
 }
 
@@ -59,15 +59,38 @@
   font-weight: bold;
   border-bottom: dodgerblue 2px solid;
 }
-.b {
+.bor1 {
   border: 1px solid red;
 }
+.bor2 {
+  border: 1px solid rgb(123, 255, 0);
+  height: 100px;
+}
+.bor3 {
+  border: 1px solid rgb(0, 119, 255);
+}
+.bor4 {
+  border: 1px solid rgb(255, 0, 234);
+}
 
+.navbar-strip {
+  background-color: rgb(0, 30, 121);
+  margin-top: -8px;
+}
+.navbar-strip-top {
+  margin-top: -6px;
+}
+.navbar-strip .nav-link {
+  color: white;
+}
+.navbar-toggler-icon {
+  background-image: "/resources/design/list.png";
+}
 /* //////////////////LANDING PAGE ///////////////// */
 .carousel-background {
   width: 100%;
   position: absolute;
-  top: 13%;
+  top: 11%;
   left: 0;
   z-index: -1;
 }
