--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -3,13 +3,13 @@
   padding: 0;
   box-sizing: border-box;
 }
-h1 {
+#ivf h1 {
   text-align: center;
   margin-top: 20px;
   position: relative;
   /* border-bottom: 2px solid dodgerblue; */
 }
-h1::after {
+#ivf h1::after {
   display: block;
   margin: 0 auto;
   content: "";
@@ -37,6 +37,19 @@ h1::after {
 
   color: white;
   text-align: center;
+}
+.heading-2 {
+  color: #4a00e0;
+  text-transform: uppercase;
+}
+.consultant-1 {
+  width: 100px;
+  height: 100px;
+  border-radius: 5px;
+  overflow: hidden;
+}
+.doc-card-row p {
+  line-height: 18px;
 }
 /* ////////////////////////////////// IVF /////////////////////////////////////////// */
 #ivf {
