--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -3,6 +3,25 @@
   padding: 0;
   box-sizing: border-box;
 }
+.b1 {
+  border: 2px solid red;
+  height: 100px;
+  width: 100%;
+}
+.b2 {
+  border: 2px solid greenyellow;
+  height: 100%;
+  width: 100%;
+}
+.block-1-2 {
+  width: 50%;
+}
+.block-1-of-3 {
+  width: 33%;
+}
+.block-2-of-3 {
+  width: 67%;
+}
 #ivf h1 {
   text-align: center;
   margin-top: 20px;
@@ -69,7 +88,45 @@ p {
 }
 .info p {
   font-size: 1rem;
+  white-space: pre-wrap;
 }
+
+/* /////////////////////// DOCTORS /////////////////////// */
+#doctors {
+  width: 100%;
+  height: 50vh;
+  background: rgb(9, 149, 240);
+  background: linear-gradient(
+    90deg,
+    rgba(9, 149, 240, 1) 0%,
+    rgba(0, 10, 71, 1) 0%,
+    rgba(4, 123, 181, 0.835171568627451) 99%
+  );
+}
+#doctors figure {
+  margin-left: 10%;
+  width: 15%;
+  object-fit: cover;
+}
+#doctors img {
+  width: 100%;
+  /* width: 200px; */
+  margin: 20px 10%;
+  border: 4px white solid;
+  box-shadow: 2px 2px gray;
+}
+#doctors .caption {
+  /* margin-top: -100px; */
+  margin-left: 20%;
+}
+.caption-text {
+  /* text-align: center; */
+  width: 60%;
+  margin-top: -200px;
+  margin-left: 20%;
+  /* border: 2px solid red; */
+}
+
 /* //////////////////////// MEDIA QUERIES //////////////////////////////////////////// */
 @media (max-width: 576px) {
 }
@@ -84,6 +141,12 @@ p {
 
 /* // Large devices (desktops, 992px and up) */
 @media (max-width: 992px) {
+  .block-1-of-3 {
+    width: 100%;
+  }
+  .block-2-of-3 {
+    width: 100%;
+  }
 }
 
 /* // X-Large devices (large desktops, 1200px and up) */
