--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,6 @@
 }
 .navbar-brand {
   color: dodgerblue !important;
-
   font-size: 1em !important;
 }
 .navbar-brand h2:hover {
@@ -42,7 +41,7 @@
   color: dodgerblue;
 }
 .navbar a:hover {
-  color: rgb(3, 77, 150);
+  /* color: rgb(3, 77, 150); */
   font-weight: bold;
   border-bottom: 1ps dotted dodgerblue;
 }
@@ -68,8 +67,8 @@
   border: 1px solid red;
 }
 .bor2 {
-  border: 1px solid rgb(123, 255, 0);
-  height: 100px;
+  border: 2px solid rgb(123, 255, 0);
+  /* height: 100px; */
 }
 .bor3 {
   border: 1px solid rgb(0, 119, 255);
@@ -88,7 +87,6 @@
 
 .navbar-strip {
   background-color: rgb(0, 30, 121);
-  margin-top: -8px;
 }
 .navbar-strip-top {
   margin-top: -6px;
@@ -102,9 +100,9 @@
 /* //////////////////LANDING PAGE ///////////////// */
 .carousel-background {
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
   position: absolute;
-  top: 11%;
+  top: 8%;
   left: 0;
   z-index: -1;
   overflow: hidden;
@@ -118,27 +116,19 @@
 }
 #header {
   width: 100%;
-  height: 80vh;
+  /* height: 80vh; */
   margin-top: 70px;
 }
 #header .brand-name {
   color: dodgerblue;
   font-weight: bold;
 }
-#header .btn-get-started {
-  font-size: 16px;
-  font-weight: 500;
-  display: inline-block;
-  color: dodgerblue;
-  border-radius: 50px;
-  padding: 10px 30px;
-  transition: 500ms;
-  border: 1px solid dodgerblue;
-  text-decoration: none;
+.tag-line {
+  margin-bottom: 30%;
 }
-#header .btn-get-started:hover {
-  color: #fff;
-  background-color: dodgerblue;
+.tag-line h1,
+.tag-line h2 {
+  font-size: 3vw;
 }
 #header img {
   text-align: right;
@@ -239,6 +229,9 @@
 
 /* // No media query necessary for xs breakpoint as it's effectively `@media (min-width: 0) { ... }` */
 @media (max-width: 576px) {
+  .tag-line {
+    margin-bottom: 8%;
+  }
 }
 
 /* // Medium devices (tablets, 768px and up) */
@@ -247,6 +240,9 @@
     /* color: crimson; */
     font-size: 0.8em;
     line-height: 16px;
+  }
+  .tag-line {
+    margin-bottom: 20%;
   }
 }
 
