--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -6,21 +6,10 @@
 .b1 {
   border: 2px solid red;
   height: 100px;
-  width: 100%;
+  /* width: 100%; */
 }
 .b2 {
-  border: 2px solid greenyellow;
-  height: 100%;
-  width: 100%;
-}
-.block-1-2 {
-  width: 50%;
-}
-.block-1-of-3 {
-  width: 33%;
-}
-.block-2-of-3 {
-  width: 67%;
+  /* border: 2px solid greenyellow; */
 }
 #ivf h1 {
   text-align: center;
@@ -93,42 +82,56 @@ p {
 
 /* /////////////////////// DOCTORS /////////////////////// */
 #doctors {
+  /* border: 2px solid black; */
   width: 100%;
-  height: 50vh;
+  /* height: 50vh; */
   background: rgb(9, 149, 240);
   background: linear-gradient(
     90deg,
     rgba(9, 149, 240, 1) 0%,
     rgba(0, 10, 71, 1) 0%,
-    rgba(4, 123, 181, 0.835171568627451) 99%
+    rgb(4, 123, 181) 99%
   );
 }
-#doctors figure {
-  margin-left: 10%;
-  width: 15%;
-  object-fit: cover;
+.doc-card {
+  display: flex;
+  border: 1px solid black;
+}
+.box1 {
+  height: 15em;
+  text-align: left;
+  border: 2px solid red;
+}
+.box2 {
+  height: 100%;
+  margin: 0 auto;
+  border: 2px solid rgb(217, 255, 0);
+}
+.doc-pic {
+  display: flex;
+  height: 100%;
+  /* border: 2px solid blue; */
+  margin: 0 auto;
 }
 #doctors img {
-  width: 100%;
-  /* width: 200px; */
-  margin: 20px 10%;
+  margin: 0 auto;
+  height: 100%;
   border: 4px white solid;
   box-shadow: 2px 2px gray;
 }
-#doctors .caption {
-  /* margin-top: -100px; */
-  margin-left: 20%;
+#doctors * {
+  color: white;
 }
-.caption-text {
-  /* text-align: center; */
-  width: 60%;
-  margin-top: -200px;
-  margin-left: 20%;
-  /* border: 2px solid red; */
+#doctors .captions {
+  /* margin-top: 15px; */
+  padding-right: 30px;
 }
 
 /* //////////////////////// MEDIA QUERIES //////////////////////////////////////////// */
 @media (max-width: 576px) {
+  .box1 {
+    height: 30vh;
+  }
 }
 
 /* // Medium devices (tablets, 768px and up) */
@@ -141,12 +144,6 @@ p {
 
 /* // Large devices (desktops, 992px and up) */
 @media (max-width: 992px) {
-  .block-1-of-3 {
-    width: 100%;
-  }
-  .block-2-of-3 {
-    width: 100%;
-  }
 }
 
 /* // X-Large devices (large desktops, 1200px and up) */
