--- a/src/components/card.css
+++ b/src/components/card.css
@@ -1,4 +1,4 @@
-.cards {
+/* .cards {
   width: 50%;
   display: flex;
   flex-wrap: wrap;
@@ -100,4 +100,4 @@ button {
 }
 button:hover {
   background-position: right center;
-}
+} */
