--- a/src/components/components.css
+++ b/src/components/components.css
@@ -1,11 +1,19 @@
 /* ///////////DEPARTMENT OWL CAROUSEL /////////////// */
+.bg-1 {
+  background: linear-gradient(
+    0deg,
+    rgba(116, 117, 119, 1) 0%,
+    rgba(212, 212, 212, 1) 99%
+  );
+}
 .owl-item-container {
-  border: 2px solid green;
+  /* border: 4px solid white;
+  border-radius: 5px; */
   width: 10vw;
   margin: 10px;
 }
 .dept-logo {
-  border: 2px solid red;
+  /* border: 2px solid red; */
   border-radius: 5px;
 }
 
@@ -17,23 +25,34 @@
 }
 
 /* //////////////// DOCTORS OWL CAROUSEL ////////////////////// */
+.owl-doctors {
+  background: linear-gradient(
+    0deg,
+    rgba(116, 117, 119, 1) 0%,
+    rgba(212, 212, 212, 1) 99%
+  );
+}
 .card-body {
   line-height: 1.5;
   padding: 2px;
+  display: flex;
+  flex-direction: column;
 }
-.card-title{
+.card-title {
   font-size: 1.75vw;
-  font-weight:700
+  font-weight: 700;
 }
-.card-text{
+.card-text {
   margin-top: -4px;
-  font-size:1.4vw;
-  line-height:1;
+  font-size: 1.4vw;
+  line-height: 1;
 }
-.card-body p{
-  margin-bottom:2%;
+.card-body p {
+  margin-bottom: 2%;
 }
 .readmore-btn {
+  margin: 0 auto;
+  width: fit-content;
   border-radius: 4px;
   background-image: linear-gradient(
     to right,
@@ -48,22 +67,23 @@
   padding: 0.3em;
   text-decoration: none;
   color: whitesmoke;
+  text-align: center;
+  margin-top: 10%;
+  /* border: 5px solid red; */
 }
 .readmore-btn:hover {
   background-position: right center;
 }
 
 /* ///////////////////// MEDIA QUERIES ////////////////// */
+
 @media (max-width: 576px) {
-  .owl-item-title {
-    font-size: 0.5em;
-  }
 }
 
 /* // Medium devices (tablets, 768px and up) */
 @media (max-width: 768px) {
   .owl-item-title {
-    font-size: 0.7em;
+    font-size: 2vw;
   }
 }
 
